--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
+  google_nav_bar: ^5.0.7
   google_sign_in: ^6.3.0
   http: ^1.3.0
   image_picker: ^1.1.2
