--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   bloc: ^9.0.0
   cloud_firestore: ^5.6.6
+  crypto: ^3.0.6
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.5.2
   firebase_core: ^3.13.0
