--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,12 @@ flutter:
     - assets/logo.json
     - assets/google.png
     - assets/hourglass.png
+    - assets/addevent.png
+    - assets/analytics.png
+    - assets/request.png
+    - assets/createblog.png
+    - assets/coupon.png
+    - assets/myblog.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
