--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.3.0
   http: ^1.3.0
   image_picker: ^1.1.2
+  intl: ^0.20.2
   lottie: ^3.3.1
   shared_preferences: ^2.5.3
 
